php5 generator fix: Hide misleading warning when using single inheritance and multiple implementations which is supported by php5.

BUG:336889
FIXED-IN:4.13.3
(cherry picked from commit 11f59ca774e9ff1131c115ae1a03a7c27df96dd6)